--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -19,7 +19,7 @@
   background-color: var(--color-primary);
   color: white;
 
-  border-bottom: 1px solid var(--color-border-header);
+  border-bottom: 1px solid transparent
 }
 
 /* ================= LOGO ================= */
@@ -66,10 +66,9 @@
 .app-content {
   flex: 1;
   overflow-y: auto;
-  background-color: var(--color-bg-content);
-
   display: flex;
   justify-content: center;
+  background: var(--color-app-bg);
 }
 
 .app-content > * {
