--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,7 +1,14 @@
 /* You can add global styles to this file, and also import other style files */
 
-@use 'tailwindcss';
 @use './styles/_variables';
+@use 'tailwindcss';
+
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+
+
 
 html,
 body {
