--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,13 +1,8 @@
 /* You can add global styles to this file, and also import other style files */
 
 @use './styles/_variables';
-@use 'tailwindcss';
 
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
-
-
+@use "bootstrap/scss/bootstrap";
 
 
 html,
@@ -16,4 +11,7 @@ body {
     height: 100%;
     font-family: 'Roboto', system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI',
         Oxygen, Ubuntu, Cantarell, 'Helvetica Neue', Arial, sans-serif;
+}
+.text-y {
+    color: var(--color-secondary);
 }
